# mineru-api

./: .gitignore  Dockerfile  Dockerfile.origi  Dockerfile.serverless  README.md  download_model.sh  download_models.py  download_models2.py  magic-pdf.gpu.json  pyproject.toml
.github/workflows/: image.yml
app/: serverless.py
