[project]
name = "mineru-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Kosmas",email = "thomas510111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "magic-pdf (>=1.3.11,<2.0.0)",
    "runpod (>=1.7.9,<2.0.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "huggingface-hub (>=0.32.0,<0.33.0)",
    "modelscope (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
