[project]
name = "mineru-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Kosmas",email = "thomas510111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mineru[pipeline] (>=2.0.5,<3.0.0)",
    "runpod (>=1.7.12,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
